--- a/public/index.html
+++ b/public/index.html
@@ -45,14 +45,16 @@
     <!--     <div class="title">
             Camera
         </div> -->
-      <!--   <div class="camWindow cam">
+        <div class="camWindow cam">
             <video autoplay></video>
-        </div> -->
+        </div>
         <!--     <div class="camCapture cam">
      <canvas></canvas> -->
         <!-- </div> -->
         <div>
             <img src="" alt="">
+            <canvas></canvas>
+            
         </div>
         
     </div>
